Deletes first the download.php file during updates.

--- a/administrator/components/com_okeydoc/language/en-GB/en-GB.com_okeydoc.sys.ini
+++ b/administrator/components/com_okeydoc/language/en-GB/en-GB.com_okeydoc.sys.ini
@@ -13,8 +13,8 @@ COM_OKEYDOC_FOLDER_CREATION_SUCCESS="Folder 'okeydoc' created successfully"
 COM_OKEYDOC_FOLDER_CREATION_ERROR="Unable to create the 'okeydoc' folder"
 COM_OKEYDOC_HTACCESS_CREATION_SUCCESS="File '.htaccess' created successfully"
 COM_OKEYDOC_HTACCESS_CREATION_ERROR="Unable to create the '.htaccess' file."
-COM_OKEYDOC_DOWNLOAD_FILE_COPY_SUCCESS="File 'download.php' copied successfully"
-COM_OKEYDOC_DOWNLOAD_FILE_COPY_ERROR="Unable to copy the 'download.php' file.<br />You must copy (or overwrite) manually this file from :<br />administrator/components/com_okeydoc/download.php<br /> to:<br />okeydoc/download.php"
+COM_OKEYDOC_DOWNLOAD_FILE_MOVE_SUCCESS="File 'download.php' moved successfully"
+COM_OKEYDOC_DOWNLOAD_FILE_MOVE_ERROR="Unable to move the 'download.php' file.<br />You must move manually this file from :<br />administrator/components/com_okeydoc/helpers/download.php<br /> to:<br />okeydoc/download.php"
 COM_OKEYDOC_INSTALLING_COMPONENT_VERSION="Installing component version = "
 COM_OKEYDOC_CURRENT_JOOMLA_VERSION="Current Joomla! version = "
 COM_OKEYDOC_UPDATE_INCORRECT_VERSION="Higher or equal version is already installed: "
