Improves the component installation and update.

--- a/administrator/components/com_okeydoc/language/fr-FR/fr-FR.com_okeydoc.sys.ini
+++ b/administrator/components/com_okeydoc/language/fr-FR/fr-FR.com_okeydoc.sys.ini
@@ -8,7 +8,7 @@ COM_OKEYDOC_SUBMENU_DOCUMENTS="Documents"
 COM_OKEYDOC_SUBMENU_FOLDERS="Dossiers"
 COM_OKEYDOC_SUBMENU_CATEGORIES="Categories"
 COM_OKEYDOC_CONFIGURATION="Paramètres du gestionnaire de documents Okey DOC"
-COM_OKEYDOC_INSTALLATION_DESC="Okey DOC est un système de gestion de document simple et facile à prendre en main.<br />Afin d'utiliser correctement Okey DOC, veuillez lire la documentation d'installation.<br />Avant d'utiliser Okey DOC vous DEVEZ installer puis activer le plugin Okey DOC (plg_okeydoc)."
+COM_OKEYDOC_INSTALLATION_DESC="Okey DOC est un système de gestion de document simple et facile à prendre en main. Il vous permet de gérer facilement vos documents via votre site Joomla.<br />Okey DOC profite des ACL Joomla ainsi que de son modèle de données. Vous pouvez organiser vos documents par catégories puis les lier à des articles ou à des categories d'article."
 COM_OKEYDOC_FOLDER_CREATION_SUCCESS="Le dossier 'okeydoc' a été créé avec succès."
 COM_OKEYDOC_FOLDER_CREATION_ERROR="Impossible de créer le dossier 'okeydoc'."
 COM_OKEYDOC_HTACCESS_CREATION_SUCCESS="Le fichier '.htaccess' a été créé avec succès."
