--- a/administrator/components/com_okeydoc/language/en-GB/en-GB.com_okeydoc.sys.ini
+++ b/administrator/components/com_okeydoc/language/en-GB/en-GB.com_okeydoc.sys.ini
@@ -8,7 +8,7 @@ COM_OKEYDOC_SUBMENU_DOCUMENTS="Documents"
 COM_OKEYDOC_SUBMENU_FOLDERS="Folders"
 COM_OKEYDOC_SUBMENU_CATEGORIES="Categories"
 COM_OKEYDOC_CONFIGURATION="Okey DOC Manager Options"
-COM_OKEYDOC_INSTALLATION_DESC="Okey DOC is a user friendly document management sysytem.<br />In order to use Okey DOC properly, please read the Installation Note (pdf).<br />Before doing anything with the DMS, you MUST install then enable the Okey DOC plugin (plg_okeydoc)."
+COM_OKEYDOC_INSTALLATION_DESC="Okey DOC is a simple but efficient document management system. It allows you to manage easily your documents through your Joomla website.<br />Okey DOC takes advantage of the Joomla ACL as well as its data model. You can organize your documents by categories then link them to articles or article categories."
 COM_OKEYDOC_FOLDER_CREATION_SUCCESS="Folder 'okeydoc' created successfully"
 COM_OKEYDOC_FOLDER_CREATION_ERROR="Unable to create the 'okeydoc' folder"
 COM_OKEYDOC_HTACCESS_CREATION_SUCCESS="File '.htaccess' created successfully"
